--- a/quiz/client/serve/index.html
+++ b/quiz/client/serve/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Anime nicht-musik Quiz</title>
+    <title>otakuquiz.lol &ndash; now with music 🎹</title>
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
