add funny mascot on page load

--- a/quiz/client/serve/index.html
+++ b/quiz/client/serve/index.html
@@ -7,6 +7,9 @@
 <body>
     <div class="screen-container"></div>
     <div class="overlay-container"></div>
+    <div class="mascot-overlay">
+        <div class="mascot"></div>
+    </div>
     <script src="/client.js"></script>
 </body>
 </html>
