--- a/quiz/client/serve/index.html
+++ b/quiz/client/serve/index.html
@@ -2,6 +2,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>otakuquiz.lol &ndash; now with music 🎹</title>
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
 </head>
 <body>
