--- a/quiz/client/serve/index.html
+++ b/quiz/client/serve/index.html
@@ -7,6 +7,13 @@
 </head>
 <body>
     <div class="screen-container"></div>
+    <div class="settings-overlay">
+        <div class="settings-button">
+            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor"><path d="M3,6H21V8H3V6M3,11H21V13H3V11M3,16H21V18H3V16Z" /></svg>
+        </div>
+        <div class="settings-dropdown">
+        </div>
+    </div>
     <div class="overlay-container"></div>
     <div class="mascot-overlay">
         <div class="mascot"></div>
