cleanup; preload fonts

--- a/quiz/client/serve/index.html
+++ b/quiz/client/serve/index.html
@@ -2,6 +2,13 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>otakuquiz.lol &ndash; now with music 🎹</title>
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-600.woff2" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-600italic.woff2" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-700.woff2" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-700italic.woff2" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-800.woff2" as="font" crossorigin="anonymous" />
+    <link rel="preload" href="/fonts/fira-sans-v16-latin-800italic.woff2" as="font" crossorigin="anonymous" />
+    
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/style.css">
 </head>
